@@ -1,3 +1,4 @@
 class Shop < ActiveRecord::Base
   include ShopifyApp::Shop
+  include ShopifyApp::SessionStorage
 end
